added next level trigger

--- a/Ulearn game/Ulearn game.csproj
+++ b/Ulearn game/Ulearn game.csproj
@@ -215,5 +215,11 @@
   <ItemGroup>
     <None Include="src\sound\kill.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\texture\brick_go.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\texture\brick_old.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
