add rifle for bandits + "R" button restarts current level

--- a/Ulearn game/Ulearn game.csproj
+++ b/Ulearn game/Ulearn game.csproj
@@ -259,5 +259,11 @@
   <ItemGroup>
     <None Include="src\texture\bullet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\bandit\bandit_pistol.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\bandit\bandit_rifle.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
