--- a/Ulearn game/packages.config
+++ b/Ulearn game/packages.config
@@ -8,6 +8,7 @@
   <package id="NAudio.Wasapi" version="2.0.0" targetFramework="net472" />
   <package id="NAudio.WinForms" version="2.0.1" targetFramework="net472" />
   <package id="NAudio.WinMM" version="2.0.1" targetFramework="net472" />
+  <package id="NUnit" version="3.13.3" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
 </packages>
